<resources>
    <string name="app_name">Dionysus</string>
    <string name="watchlist">Watchlist</string>
    <string name="diary">Diary</string>
    <string name="add_watchlist_entry">Add watchlist entry</string>
    <string name="add_diary_entry">Add diary entry</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="loading_watchlist_error">Error while loading watchlist</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="loading_movie_error">Error while loading movie</string>
    <string name="movie">Movie</string>
    <string name="loading_search_results_error">Error loading search results</string>
    <string name="back">Back</string>
    <string name="test_tag_watchlist_content">test_tag_watchlist_content</string>
    <string name="test_tag_diary_content">test_tag_diary_content</string>
    <string name="cancel">Cancel</string>
    <string name="loading_diary_error">Error while loading diary</string>
    <string name="delete">Delete</string>
    <string name="watchlist_toggle_fab">Watchlist toggle FAB</string>
</resources>
